fix text alignment

--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,6 @@ body {
   text-align: center;
 }
 
-.events-contaainer {
-  /* margin: 0 auto; */
-  /* max-width: 1250px; */
-}
 .event {
   padding: 20px;
   /* font-family: "Courier New", Courier, monospace; */
